syntax = "proto3";

package gopherkeeper;

option go_package = "gopherkeeper/proto";

// AuthorizeHandler
message AuthorizeRequest {
  string login = 1;
  string password = 2;
}
message AuthorizeResponse {
  string token = 1;
}

// RegisterHandler
message RegisterRequest {
  string login = 1;
  string password = 2;
}
message RegisterResponse {
  string token = 1;
}

// SecretsHandler
message SecretsListRequest {}
message Secret {
  string login = 1;
  string comment = 2;
  string card = 3;
}
message SecretsListResponse {
  repeated Secret secrets  = 1;
}

service Secrets {
  rpc AuthorizeHandler(AuthorizeRequest) returns (AuthorizeResponse);
  rpc RegisterHandler(RegisterRequest) returns (RegisterResponse);
  rpc SecretsListHandler(SecretsListRequest) returns (SecretsListResponse);
}
